JumpScript/tests/baselines/reference/parserES5SymbolProperty2.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty2.jump(2,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty2.jump (1 errors) ====
    interface I {
        [Symbol.unscopables](): string;
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }